# skinner

./: .gitignore  CMakeLists.txt  FileReadingUtil.h  Makefile  SkinningCommander.cpp  SkinningSession.h  TODO.md  TODO.txt  main.cpp  skinner
archive/: 2025-10-06.txt  2025-10-07.txt  2025-10-09.txt  2025-10-14.txt  2025-10-15.txt  2025-10-16.txt  2025-10-17.txt  2025-10-18.txt  2025-10-20.txt  2025-10-21.txt  2025-10-23.txt  2025-10-27.txt  2025-11-05.txt  2025-11-06.txt  2025-11-07.txt  2025-11-10.txt  2025-11-11.txt  2025-11-12.txt  2025-11-13.txt  2025-11-14.txt  2025-11-17.txt  2025-11-19.txt  2025-11-24.txt  2025-11-25.txt
libs/: CMakeLists.txt  raylib_namespaced.h
src/: CMakeLists.txt  FileReadingUtil.h  SkinningCommander.cpp  SkinningCommander.h  SkinningController.cpp  SkinningController.h  SkinningInterval.cpp  SkinningInterval.h  SkinningSession.h  WorkVisualiser.cpp  WorkVisualiser.h  flag.h  utils.h
test/: CMakeLists.txt  SkinningController_test.cpp  flag_test.cpp  initial_tests.cpp  integration_test.cpp  test_util.h
